Use Bootstrap custom forms on all tools menu
* Refactor of menus, update js in consequence
* Add Bootstrap form validation (client side) to force the select of the generation (evar.v)
* Migrate all relmenu close relation that were not computed to a table in cousmenu using %cousins.v1.v2 to display if counts>0
* Update translation of close relations
* Few minor template fixes

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -6965,7 +6965,7 @@ eo: geavoj
 es: abuelos
 et: vanavanemad
 fi: isovanhemmat
-fr: des grands-parents
+fr: grands-parents
 he:   סבים
 is: afi og amma
 it: nonni
@@ -6997,7 +6997,7 @@ eo: gepraavoj
 es: bisabuelos
 et: vanavanavanemad
 fi: iso-isovanhemmat
-fr: des arrière-grands-parents
+fr: arrière-grands-parents
 he:   רב-סבים
 is: langafi og langamma
 it: bisnonni
@@ -7014,6 +7014,12 @@ sk: praprastarí rodičia
 sl: prastari starši
 sv: gammel-farföräldrar/gammel-morföräldrar
 tr: büyük-büyük-ebeveynler
+
+    great-great-grandparents
+de: Ururgroßelternteil
+en: great-great-grandparents
+eo: prapraavo
+fr: arrière-arrière-grands-parents
 
     gregorian/julian/french/hebrew
 af: gregoriaans/juliaans/frans/hebreeus
@@ -11330,6 +11336,7 @@ en: on
 eo: la
 es: el
 et: :i:
+en:
 fi: :e:
 fr: le
 he:   ב-
@@ -11492,7 +11499,7 @@ eo: nur la elektita generacio
 es: solamente la generación elegida
 et: ainult valitud sugupõlv
 fi: vain valittu sukupolvi
-fr: seulement la génération sélectionnée
+fr: seulement cette génération
 he:  דור הנבכר בלבד
 is: aðeins valda kynslóðin
 it: soltanto la generazione selezionata
@@ -14920,6 +14927,10 @@ sk: vnúčatá
 sl: vnuki
 sv: barnbarnen
 tr: torunlar
+
+    grandchild/grandchildren
+en: grandchild/grandchildren
+fr: petit-enfant/petits-enfants
 
     the grandparents
 af: die grootouers
