--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -4447,14 +4447,17 @@ sl: nadaljevano
 sv: forts
 tr: devam eden
 
-    copy link
-co: cupià u liame in u preme’papei
-de: Link in die Zwischenablage kopieren
-en: copy the link to the clipboard
-fr: copier le lien dans le presse-papier
-pt: copiar o link para a área de transferência
+    copy link %s
+co: cupià u liame %s in u preme’papei
+en: copy the link %s to the clipboard
+fr: copier le lien %s dans le presse-papier
+pt: copiar o link %s para a área de transferência
 sv: kopiera länken
 tr: bağlantıyı panoya kopyala
+
+    copy permalink
+en: copy the permalink
+fr: copier le permalien
 
     country
 co: statu
@@ -16617,7 +16620,7 @@ eo: sorĉisto/sorĉistoj/amiko/amikoj/exterior
 es: mago/magos/amigo/amigos/exterior
 et: teadmamees/teadmamehed/sõber/sõbrad/tavakasutaja
 fi: velho/velho/valittu/valittu/exterior
-fr: magicien/magiciens/ami/amis/extérieur
+fr: magicien/magiciens/ami/amis/visiteur
 he:  כגאון / כגאון / מיוחסת / מיוחסת /exterior
 is: uppfæra/uppfæra/vinur/vinur/exterior
 it: wizard/wizard/amico/amico/exterior
