Add minimal search on Geneanet in menubar

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -12964,6 +12964,10 @@ ru: поиск
 sv: Sök alla
 tr: Arama
 
+    search %s on Geneanet
+en: search %s on Geneanet
+fr: rechercher %s sur Geneanet
+
     see
 af: sien
 bg: вж.
