Fixup new modal 2 col upto 5gen w. translations

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -13177,6 +13177,18 @@ ru: выберите:
 sv: välj
 tr: seç
 
+    extend
+en: extend to a near ancestor
+fr: étendre à un ancêtre proche
+
+    choose an ancestor
+en: choose an ancestor
+fr: choisir un ancêtre
+
+    close
+en: close
+fr: fermer
+
     select a letter
 co: sceglie una lettera
 de: wählen Sie ein Zeichen
