show input one by one up to 5

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -16891,3 +16891,7 @@ ru: ваше сообщение ожидает проверки
 sk: tvoja správa čaká na potvrdenie
 sv: ditt meddelande väntar på godkännande
 tr: mesajınız doğrulama için bekliyor
+
+    filter by
+en: filter by
+fr: filtrer par
