--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -16904,6 +16904,14 @@ sk: tvoja správa čaká na potvrdenie
 sv: ditt meddelande väntar på godkännande
 tr: mesajınız doğrulama için bekliyor
 
+    add filter
+en: add a filter
+fr: ajouter un filtre
+
     filter by
 en: filter by
 fr: filtrer par
+
+    clear filters
+en: clear every filters
+fr: effacer tous les filtres
