Adding missing strings for Corsican in lex_co.txt
hd/lang/missing/lex_co.txt

--- a/hd/lang/missing/lex_co.txt
+++ b/hd/lang/missing/lex_co.txt
@@ -4,10 +4,10 @@ co:
     a child-in-law/children-in-law
 en: one child-in-law/children-in-law
 fr: un bel-enfant/beaux-enfants
-co:
+co: un ghjeneru o una nora/ghjeneri o nore
 
     pacsed%t to
 en: Civil solidarity pact%t with
 fr: PACS%t avec
-co:
+co: PACS%t cù
 
