find a descendant limit to hide empty rows

--- a/hd/lang/lexicon.txt
+++ b/hd/lang/lexicon.txt
@@ -3992,6 +3992,10 @@ zh:  子女
     cousin.0.1
 ->: child/children
 
+    cousin.0.1 tt
+en: son or daughter
+fr: fils ou fille
+
     children's names changed
 af: kinders se name is verander
 bg: името на детето е променено
@@ -15028,12 +15032,20 @@ en: children of one’s son or daughters
 fr: enfants de son fils ou de sa fille
 
     cousin.0.3
-en: greant-grandchild/great-grandchildren
+en: great-grandchild/great-grandchildren
 fr: arrière-petit-enfant/arrière-petits-enfants
 
     cousin.0.3 tt
-en: children of one's grandson or granddaughter
+en: children of one’s grandson or granddaughter
 fr: enfants de son petit-fils ou de sa petite-fille
+
+    cousin.0.4
+en: great-great-grandchild/great-great-grandchildren
+fr: arrière-arrière-petit-enfant/arrière-arrière-petits-enfants
+
+    cousin.0.4 tt
+en: children of one’s great-grandson or great-granddaughter
+fr: enfants de son arrière-petit-fils ou de son arrière-petite-fille
 
     the grandparents
 af: die grootouers
